# rust_realtime_raytracer

./: Cargo.toml  README.md  performances
src/: main.rs  renderer.rs
src/data_structures/: camera.rs  geom.rs  mod.rs  octree.rs  voxel.rs
