[package]
name = "raytracer"
version = "0.1.0"
authors = ["Davide Giovannini <giovannini.davide90@gmail.com>"]

[dependencies]
sdl2 = "0.19"
sdl2-sys = "0.19.0"
sdl2_ttf = "0.19.0"
cgmath = "0.9.1"
libc = "0.2.11"
rand = "0.3"
scoped_threadpool = "0.1.*"

[profile.dev]
debug = true
opt-level = 1

[profile.release]
opt-level = 3
